--- a/package.json
+++ b/package.json
@@ -61,6 +61,12 @@
 		"eslint-plugin-jsx-a11y": "^6.4.1",
 		"eslint-plugin-react": "^7.24.0",
 		"eslint-plugin-react-hooks": "^4.2.0",
+		"husky": "^7.0.1",
 		"prettier": "^2.3.2"
-	}
+	},
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run prettier && npm run lint"
+    }
+  }
 }
