Env variables renamed

--- a/.env.local.template
+++ b/.env.local.template
@@ -1,5 +1,5 @@
 NODE_ENV=${NODE_ENV}
 HOSTNAME=${HOSTNAME}
-REACT_APP_API_SERVER=${API_SERVER}
-REACT_APP_API_PREFIX=${API_PREFIX}
+REACT_APP_GATEWAY_API=${GATEWAY_API}
+REACT_APP_GATEWAY_API_PREFIX=${GATEWAY_API_PREFIX}
 SKIP_PREFLIGHT_CHECK=true
