--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,7 @@
 		"browser": true,
 		"es2021": true
 	},
-	"extends": ["plugin:react/recommended", "airbnb", "prettier"],
+	"extends": ["plugin:react/recommended"], //, "prettier", "eslint-config-airbnb"],
 	"parser": "@typescript-eslint/parser",
 	"parserOptions": {
 		"ecmaFeatures": {
