--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,61 +1,37 @@
 {
 	"env": {
 		"browser": true,
-		"es2021": true
+		"es6": true,
+		"jest": true
 	},
-	"extends": ["plugin:react/recommended"], //, "prettier", "eslint-config-airbnb"],
+	"rules": {
+		"no-console": "error",
+		"import/first": "error",
+		"react/prop-types": "off"
+	},
+	"extends": [
+		"react-app",
+		"react-app/jest",
+		"eslint:recommended",
+		"plugin:react/recommended",
+		"plugin:@typescript-eslint/recommended",
+		"plugin:react-hooks/recommended",
+		"prettier"
+	],
 	"parser": "@typescript-eslint/parser",
+	"root": true,
+	"plugins": ["react", "@typescript-eslint"],
 	"parserOptions": {
+		"ecmaVersion": 11,
 		"ecmaFeatures": {
 			"jsx": true
 		},
-		"ecmaVersion": 12,
-		"sourceType": "module"
-	},
-	"plugins": ["react", "@typescript-eslint"],
-	"rules": {
-		// note you must disable the base rule as it can report incorrect errors
-		"no-use-before-define": "off",
-		"no-shadow": "off",
-		"@typescript-eslint/no-shadow": ["error"],
-		"@typescript-eslint/no-use-before-define": ["error"],
-		"react/jsx-filename-extension": [
-			1,
-			{ "extensions": [".js", ".jsx", ".ts", ".tsx"] }
-		],
-		"import/extensions": [
-			"error",
-			"always",
-			{
-				"js": "never",
-				"jsx": "never",
-				"ts": "never",
-				"tsx": "never"
-			}
-		],
-		"no-undef": "off",
-		"jsx-a11y/label-has-associated-control": [
-			"error",
-			{
-				"required": {
-					"some": ["nesting", "id"]
-				}
-			}
-		],
-		"jsx-a11y/label-has-for": [
-			"error",
-			{
-				"required": {
-					"some": ["nesting", "id"]
-				}
-			}
-		]
+		"project": "./tsconfig.json"
 	},
 	"settings": {
-		"import/resolver": {
-			"node": {
-				"extensions": [".js", ".jsx", ".ts", ".tsx"]
-			}
+		"react": {
+			"pragma": "React",
+			"version": "detect"
 		}
 	}
 }
