--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
 		"test": "react-scripts test",
 		"eject": "react-scripts eject",
 		"lint": "eslint '*/**/*.{ts,tsx}' --fix",
-		"prettier": "prettier --write .",
-		"publish": "npm run build && ./build.hip.app.sh"
+		"prettier": "prettier --write ."
 	},
 	"browserslist": {
 		"production": [
