--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 	"scripts": {
 		"prestart": "envsubst < .env.local.template > .env.development",
 		"start": "react-scripts start",
+		"prebuild": "envsubst < .env.template > .env",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject",
