--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
 		"test": "react-scripts test",
 		"eject": "react-scripts eject",
 		"lint": "eslint '*/**/*.{ts,tsx}' --fix",
-		"prettier": "prettier --write ."
+		"prettier": "prettier --write .",
+		"bundle": "webpack --mode=production --config webpack.config.js",
+		"publish": "npm run build && npm run bundle"
 	},
 	"browserslist": {
 		"production": [
@@ -52,7 +54,9 @@
 		"@typescript-eslint/parser": "^4.29.3",
 		"eslint-config-prettier": "^8.3.0",
 		"husky": "^7.0.1",
-		"prettier": "2.3.2"
+		"prettier": "2.3.2",
+		"uglifyjs-webpack-plugin": "^2.2.0",
+		"webpack-cli": "^4.8.0"
 	},
 	"husky": {
 		"hooks": {
