--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
         "@testing-library/jest-dom": "^5.16.1",
         "@testing-library/react": "^12.1.2",
         "@testing-library/user-event": "^13.5.0",
-        "@types/jest": "^27.0.3",
-        "@types/node": "^17.0.4",
+        "@types/jest": "^27.4.0",
+        "@types/node": "^17.0.7",
         "@types/react": "^17.0.38",
         "@types/react-dom": "^17.0.11",
-        "eslint": "^8.5.0",
+        "eslint": "^8.6.0",
         "formik": "^2.2.9",
+        "postcss-flexbugs-fixes": "^5.0.2",
+        "postcss-loader": "^6.2.1",
+        "postcss-normalize": "^10.0.1",
+        "postcss-preset-env": "^7.2.0",
         "primeflex": "^3.1.2",
         "primeicons": "^5.0.0",
         "primereact": "^7.1.0",
@@ -21,9 +25,9 @@
         "react-router-dom": "^6.2.1",
         "react-scripts": "5.0.0",
         "react-transition-group": "^4.4.2",
-        "swr": "^1.1.1",
+        "swr": "^1.1.2",
         "typescript": "^4.5.4",
-        "web-vitals": "^1.0.1"
+        "web-vitals": "^2.1.2"
     },
     "scripts": {
         "prestart": "envsubst < .env.development.template > .env.development",
@@ -50,8 +54,8 @@
     },
     "homepage": "/apps/hip",
     "devDependencies": {
-        "@typescript-eslint/eslint-plugin": "^5.8.0",
-        "@typescript-eslint/parser": "^5.8.0",
+        "@typescript-eslint/eslint-plugin": "^5.8.1",
+        "@typescript-eslint/parser": "^5.8.1",
         "eslint-config-prettier": "^8.3.0",
         "husky": "^7.0.4",
         "prettier": "2.5.1"
