--- a/package.json
+++ b/package.json
@@ -3,6 +3,12 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@emotion/react": "^11.7.1",
+        "@emotion/styled": "^11.6.0",
+        "@material-ui/core": "^4.12.3",
+        "@mui/icons-material": "^5.2.5",
+        "@mui/material": "^5.2.7",
+        "@mui/styled-engine-sc": "^5.1.0",
         "@nextcloud/auth": "^1.3.0",
         "@testing-library/jest-dom": "^5.16.1",
         "@testing-library/react": "^12.1.2",
@@ -25,6 +31,7 @@
         "react-router-dom": "^6.2.1",
         "react-scripts": "5.0.0",
         "react-transition-group": "^4.4.2",
+        "styled-components": "^5.3.3",
         "swr": "^1.1.2",
         "typescript": "^4.5.4",
         "web-vitals": "^2.1.2"
