--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,3 @@
 NODE_ENV=production
-REACT_APP_GATEWAY_API=
-REACT_APP_GATEWAY_API_PREFIX=/api/v1
+HOSTNAME=${HOSTNAME}
+REACT_APP_GATEWAY_API=${GATEWAY_API}
