--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "@emotion/react": "^11.7.1",
         "@emotion/styled": "^11.6.0",
         "@mui/icons-material": "^5.2.5",
+        "@mui/lab": "^5.0.0-alpha.67",
         "@mui/material": "^5.2.7",
         "@mui/styled-engine-sc": "^5.1.0",
         "@nextcloud/auth": "^1.3.0",
