--- a/package.json
+++ b/package.json
@@ -1,67 +1,68 @@
 {
-    "name": "hip-frontend",
-    "version": "0.1.0",
-    "private": true,
-    "dependencies": {
-        "@emotion/react": "^11.7.1",
-        "@emotion/styled": "^11.6.0",
-        "@mui/icons-material": "^5.2.5",
-        "@mui/lab": "^5.0.0-alpha.67",
-        "@mui/material": "^5.2.7",
-        "@mui/styled-engine-sc": "^5.1.0",
-        "@nextcloud/auth": "^1.3.0",
-        "@testing-library/jest-dom": "^5.16.1",
-        "@testing-library/react": "^12.1.2",
-        "@testing-library/user-event": "^13.5.0",
-        "@types/jest": "^27.4.0",
-        "@types/node": "^17.0.7",
-        "@types/react": "^17.0.38",
-        "@types/react-dom": "^17.0.11",
-        "eslint": "^8.6.0",
-        "formik": "^2.2.9",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
-        "react-router-dom": "^6.2.1",
-        "react-scripts": "5.0.0",
-        "react-transition-group": "^4.4.2",
-        "swr": "^1.1.2",
-        "typescript": "^4.5.4",
-        "web-vitals": "^2.1.2"
-    },
-    "scripts": {
-        "prestart": "envsubst < .env.development.template > .env.development",
-        "start": "react-scripts start",
-        "prebuild": "envsubst < .env.template > .env",
-        "build": "react-scripts build",
-        "test": "react-scripts test",
-        "eject": "react-scripts eject",
-        "lint": "eslint '*/**/*.{ts,tsx}' --fix",
-        "prettier": "prettier --write .",
-        "publish": "npm run build && ./buildhipapp.sh"
-    },
-    "browserslist": {
-        "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
-        ],
-        "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
-        ]
-    },
-    "homepage": "/apps/hip",
-    "devDependencies": {
-        "@typescript-eslint/eslint-plugin": "^5.8.1",
-        "@typescript-eslint/parser": "^5.8.1",
-        "eslint-config-prettier": "^8.3.0",
-        "husky": "^7.0.4",
-        "prettier": "2.5.1"
-    },
-    "husky": {
-        "hooks": {
-            "pre-commit": "npm run prettier && npm run lint"
-        }
-    }
+	"name": "hip-frontend",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"@emotion/react": "^11.7.1",
+		"@emotion/styled": "^11.6.0",
+		"@mui/icons-material": "^5.2.5",
+		"@mui/lab": "^5.0.0-alpha.67",
+		"@mui/material": "^5.2.7",
+		"@mui/styled-engine-sc": "^5.1.0",
+		"@mui/x-data-grid": "^5.5.1",
+		"@nextcloud/auth": "^1.3.0",
+		"@testing-library/jest-dom": "^5.16.1",
+		"@testing-library/react": "^12.1.2",
+		"@testing-library/user-event": "^13.5.0",
+		"@types/jest": "^27.4.0",
+		"@types/node": "^17.0.7",
+		"@types/react": "^17.0.38",
+		"@types/react-dom": "^17.0.11",
+		"eslint": "^8.6.0",
+		"formik": "^2.2.9",
+		"react": "^17.0.2",
+		"react-dom": "^17.0.2",
+		"react-router-dom": "^6.2.1",
+		"react-scripts": "5.0.0",
+		"react-transition-group": "^4.4.2",
+		"swr": "^1.1.2",
+		"typescript": "^4.5.4",
+		"web-vitals": "^2.1.2"
+	},
+	"scripts": {
+		"prestart": "envsubst < .env.development.template > .env.development",
+		"start": "react-scripts start",
+		"prebuild": "envsubst < .env.template > .env",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject",
+		"lint": "eslint '*/**/*.{ts,tsx}' --fix",
+		"prettier": "prettier --write .",
+		"publish": "npm run build && ./buildhipapp.sh"
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	},
+	"homepage": "/apps/hip",
+	"devDependencies": {
+		"@typescript-eslint/eslint-plugin": "^5.8.1",
+		"@typescript-eslint/parser": "^5.8.1",
+		"eslint-config-prettier": "^8.3.0",
+		"husky": "^7.0.4",
+		"prettier": "2.5.1"
+	},
+	"husky": {
+		"hooks": {
+			"pre-commit": "npm run prettier && npm run lint"
+		}
+	}
 }
