--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "@mui/lab": "^5.0.0-alpha.67",
         "@mui/material": "^5.2.7",
         "@mui/styled-engine-sc": "^5.1.0",
+        "@mui/x-data-grid": "^5.5.1",
         "@nextcloud/auth": "^1.3.0",
         "@testing-library/jest-dom": "^5.16.1",
         "@testing-library/react": "^12.1.2",
