--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@types/react-dom": "^17.0.11",
         "eslint": "^8.6.0",
         "formik": "^2.2.9",
+        "notistack": "^2.0.4",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-router-dom": "^6.2.1",
@@ -27,7 +28,8 @@
         "react-transition-group": "^4.4.2",
         "swr": "^1.1.2",
         "typescript": "^4.5.4",
-        "web-vitals": "^2.1.2"
+        "web-vitals": "^2.1.2",
+        "yup": "^0.32.11"
     },
     "scripts": {
         "prestart": "envsubst < .env.development.template > .env.development",
