--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "eslint": "^8.6.0",
         "formik": "^2.2.9",
         "notistack": "^2.0.4",
+        "query-string": "^7.1.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-router-dom": "^6.2.1",
