--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dependencies": {
         "@emotion/react": "^11.9.0",
         "@emotion/styled": "^11.8.1",
+        "@jonkoops/matomo-tracker-react": "^0.7.0",
         "@mui/icons-material": "^5.8.2",
         "@mui/lab": "^5.0.0-alpha.84",
         "@mui/material": "^5.8.2",
