--- a/package.json
+++ b/package.json
@@ -1,72 +1,71 @@
 {
-    "name": "hip-frontend",
-    "version": "0.1.0",
-    "private": true,
-    "dependencies": {
-        "@emotion/react": "^11.9.0",
-        "@emotion/styled": "^11.8.1",
-        "@jonkoops/matomo-tracker-react": "^0.7.0",
-        "@mui/icons-material": "^5.8.2",
-        "@mui/lab": "^5.0.0-alpha.84",
-        "@mui/material": "^5.8.2",
-        "@mui/styled-engine-sc": "^5.8.0",
-        "@nextcloud/auth": "^1.3.0",
-        "@testing-library/jest-dom": "^5.16.4",
-        "@testing-library/react": "^13.3.0",
-        "@testing-library/user-event": "^14.2.0",
-        "@types/jest": "^28.1.0",
-        "@types/node": "^17.0.38",
-        "eslint": "^8.16.0",
-        "formik": "^2.2.9",
-        "notistack": "^2.0.5",
-        "query-string": "^7.1.1",
-        "react": "^18.1.0",
-        "react-data-grid": "^7.0.0-beta.13",
-        "react-dom": "^18.1.0",
-        "react-router-dom": "^6.3.0",
-        "react-scripts": "5.0.1",
-        "react-transition-group": "^4.4.2",
-        "swr": "^1.3.0",
-        "typescript": "^4.7.2",
-        "web-vitals": "^2.1.4",
-        "yup": "^0.32.11"
-    },
-    "scripts": {
-        "prestart": "envsubst < .env.development.template > .env.development",
-        "start": "react-scripts start",
-        "prebuild": "envsubst < .env.template > .env",
-        "build": "react-scripts build",
-        "test": "react-scripts test",
-        "eject": "react-scripts eject",
-        "lint": "eslint '*/**/*.{ts,tsx}' --fix",
-        "prettier": "prettier --write .",
-        "publish": "npm run build && ./buildhipapp.sh"
-    },
-    "browserslist": {
-        "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
-        ],
-        "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
-        ]
-    },
-    "homepage": "/apps/hip",
-    "devDependencies": {
-        "@types/react": "^18.0.10",
-        "@types/react-dom": "^18.0.5",
-        "@typescript-eslint/eslint-plugin": "^5.27.0",
-        "@typescript-eslint/parser": "^5.27.0",
-        "eslint-config-prettier": "^8.5.0",
-        "husky": "^8.0.1",
-        "prettier": "2.6.2"
-    },
-    "husky": {
-        "hooks": {
-            "pre-commit": "npm run prettier && npm run lint"
-        }
-    }
+	"name": "hip-frontend",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"@emotion/react": "^11.9.0",
+		"@emotion/styled": "^11.8.1",
+		"@jonkoops/matomo-tracker-react": "^0.7.0",
+		"@mui/icons-material": "^5.8.2",
+		"@mui/lab": "^5.0.0-alpha.84",
+		"@mui/material": "^5.8.2",
+		"@mui/styled-engine-sc": "^5.8.0",
+		"@nextcloud/auth": "^1.3.0",
+		"@testing-library/jest-dom": "^5.16.4",
+		"@testing-library/react": "^13.3.0",
+		"@testing-library/user-event": "^14.2.0",
+		"@types/jest": "^28.1.0",
+		"@types/node": "^17.0.38",
+		"eslint": "^8.16.0",
+		"formik": "^2.2.9",
+		"notistack": "^2.0.5",
+		"query-string": "^7.1.1",
+		"react": "^18.1.0",
+		"react-data-grid": "^7.0.0-beta.13",
+		"react-dom": "^18.1.0",
+		"react-router-dom": "^6.3.0",
+		"react-scripts": "5.0.1",
+		"react-transition-group": "^4.4.2",
+		"swr": "^1.3.0",
+		"typescript": "^4.7.2",
+		"web-vitals": "^2.1.4",
+		"yup": "^0.32.11"
+	},
+	"scripts": {
+		"prestart": "envsubst < .env.development.template > .env.development",
+		"start": "react-scripts start",
+		"prebuild": "envsubst < .env.template > .env",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject",
+		"lint": "eslint '*/**/*.{ts,tsx}' --fix",
+		"prettier": "prettier --write ."
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	},
+	"homepage": "/apps/hip",
+	"devDependencies": {
+		"@types/react": "^18.0.10",
+		"@types/react-dom": "^18.0.5",
+		"@typescript-eslint/eslint-plugin": "^5.27.0",
+		"@typescript-eslint/parser": "^5.27.0",
+		"eslint-config-prettier": "^8.5.0",
+		"husky": "^8.0.1",
+		"prettier": "2.6.2"
+	},
+	"husky": {
+		"hooks": {
+			"pre-commit": "npm run prettier && npm run lint"
+		}
+	}
 }
