--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"react-dom": "^18.1.0",
 		"react-router-dom": "^6.3.0",
 		"react-scripts": "5.0.1",
+		"react-shepherd": "^4.1.0",
 		"react-transition-group": "^4.4.2",
 		"swr": "^1.3.0",
 		"typescript": "^4.7.2",
