--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@testing-library/user-event": "^14.2.0",
 		"@types/jest": "^28.1.0",
 		"@types/node": "^17.0.38",
+		"axios": "^0.27.2",
 		"eslint": "^8.16.0",
 		"formik": "^2.2.9",
 		"notistack": "^2.0.5",
