fix: removed prettier for parent build

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,8 +15,7 @@
 		"eslint:recommended",
 		"plugin:react/recommended",
 		"plugin:@typescript-eslint/recommended",
-		"plugin:react-hooks/recommended",
-		"prettier"
+		"plugin:react-hooks/recommended"
 	],
 	"parser": "@typescript-eslint/parser",
 	"root": true,
