--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
 		"@typescript-eslint/parser": "^5.27.0",
 		"eslint-config-prettier": "^8.5.0",
 		"husky": "^8.0.1",
-		"prettier": "2.6.2"
+		"prettier": "^2.7.1"
 	},
 	"husky": {
 		"hooks": {
