fix: you are not on prod

--- a/.env.development.template
+++ b/.env.development.template
@@ -1,6 +1,7 @@
 NODE_ENV=${NODE_ENV}
 HOSTNAME=${HOSTNAME}
-REACT_APP_GATEWAY_API=${GATEWAY_API}
 
+REACT_APP_HOSTNAME=${HOSTNAME}
+REACT_APP_GATEWAY_API=${GATEWAY_API}
 REACT_APP_MATOMO_URL_BASE=${MATOMO_URL_BASE}
 REACT_APP_MATOMO_SITE_ID=${MATOMO_SITE_ID}
