--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
 		"test": "react-scripts test",
 		"eject": "react-scripts eject",
 		"lint": "eslint '*/**/*.{ts,tsx}' --fix",
-		"prettier": "prettier --write ."
+		"prettier": "prettier --write .",
+		"prepare": "husky install"
 	},
 	"browserslist": {
 		"production": [
