--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
 		"@testing-library/react": "^13.3.0",
 		"@testing-library/user-event": "^14.2.0",
 		"@types/jest": "^28.1.0",
+		"@types/marked": "^4.0.7",
 		"@types/node": "^17.0.38",
 		"eslint": "^8.16.0",
 		"formik": "^2.2.9",
+		"marked": "^4.2.1",
 		"notistack": "^2.0.5",
 		"query-string": "^7.1.1",
 		"react": "^18.1.0",
