--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
 		"@types/jest": "^28.1.0",
 		"@types/marked": "^4.0.7",
 		"@types/node": "^17.0.38",
+		"dayjs": "^1.11.7",
 		"eslint": "^8.16.0",
+		"filesize": "^10.0.6",
 		"formik": "^2.2.9",
 		"marked": "^4.2.1",
 		"notistack": "^2.0.5",
