--- a/.env.development.template
+++ b/.env.development.template
@@ -2,7 +2,7 @@ NODE_ENV=${NODE_ENV}
 HOSTNAME=${HOSTNAME}
 
 REACT_APP_HOSTNAME=${HOSTNAME}
-REACT_APP_GATEWAY_API=${GATEWAY_API}
+#REACT_APP_GATEWAY_API=${GATEWAY_API}
 REACT_APP_MATOMO_URL_BASE=${MATOMO_URL_BASE}
 REACT_APP_MATOMO_SITE_ID=${MATOMO_SITE_ID}
 REACT_APP_POLLING_INTERVAL=${POLLING_INTERVAL}
