--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"@mui/lab": "^5.0.0-alpha.128",
 		"@mui/material": "^5.12.2",
 		"@mui/styled-engine-sc": "^5.12.0",
+		"@nextcloud/auth": "^1.3.0",
 		"@testing-library/jest-dom": "^5.16.4",
 		"@testing-library/react": "^13.3.0",
 		"@testing-library/user-event": "^14.2.0",
@@ -63,6 +64,6 @@
 		"@typescript-eslint/parser": "^5.27.0",
 		"eslint-config-prettier": "^8.5.0",
 		"husky": "^8.0.1",
-		"prettier": "^2.7.1"
+		"prettier": "^2.8.8"
 	}
 }
